fix(_buttons/_navcard): remove duplicate styles + fix issue with display flex for ios devices on mobile

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_buttons.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_buttons.scss
@@ -132,7 +132,6 @@
             position: absolute;
             right: 15px;
             top: 37.5%;
-            width: 20px;
             display: inline-block;
         }
     }
@@ -147,10 +146,8 @@ html[dir="rtl"] {
         &--chevron-forward {
             &:before {
                 content: "\f104";
-                content: "\f104";
                 font: normal normal normal 14px/1 FontAwesome;
                 font-size: inherit;
-                width:20px;
                 height:20px;
                 position: absolute;
                 left: 15px;
