--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_navCard.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_navCard.scss
@@ -152,6 +152,10 @@
             flex-direction: column;
             flex-grow: 1;
             justify-content: space-between;
+
+            @media #{$mobile}{
+                display: block;
+            }
         }
 
         &:hover {
